<resources>
    <string name="app_name">UzTickets</string>
    <string name="action_settings">Settings</string>
    <string name="station_from">From:</string>
    <string name="station_till">Till:</string>
    <string name="date_button">Choose Date</string>
    <string name="time_button">Time</string>
    <string name="search_button">Search</string>
    <string-array name="hours">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string name="trains_list">Trains List</string>
    <string name="trainNumber">Train №</string>
    <string name="from">Departure</string>
    <string name="till">Arrival</string>
    <string name="dateFrom">Date and Time of \n Departure</string>
    <string name="dateTill">Date and Time of \n Arrival</string>
    <string name="tripDuration">Trip Duration</string>
    <string name="freePlaces">Free Places</string>





</resources>
