<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_border">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trainNumber"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        style="?android:listSeparatorTextViewStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/train_number"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        style="?android:listSeparatorTextViewStyle" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="4dp"
            style="?android:listSeparatorTextViewStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/till"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            style="?android:listSeparatorTextViewStyle" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/departure"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            style="?android:listSeparatorTextViewStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrival"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            style="?android:listSeparatorTextViewStyle" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateFrom"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            style="?android:listSeparatorTextViewStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateTill"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            style="?android:listSeparatorTextViewStyle" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_dep"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            style="?android:listSeparatorTextViewStyle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_till"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="4dp"
            style="?android:listSeparatorTextViewStyle" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tripDuration"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        style="?android:listSeparatorTextViewStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trip_duration"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        style="?android:listSeparatorTextViewStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/freePlaces"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        style="?android:listSeparatorTextViewStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/free_places"
        android:layout_gravity="center_horizontal"
        android:padding="4dp"
        style="?android:listSeparatorTextViewStyle" />
</LinearLayout>